--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,7 @@
 }
 
 .fixed-top {
-  background-color: #7e7fc0 !important;
+  background-color: white !important;
 }
 
 @media (min-width: 992px) {
