--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -721,7 +721,7 @@ box-shadow: none;
 /* footer */
 
 footer{
-  background-image: url(../images/background/5.jpg);
+  /* background-image: url(../images/background/5.jpg); */
   background-repeat: no-repeat;
   background-size:auto;
   background-position: top center;
